# metacritic-bot

./: .envrc-example  .gitignore  LICENSE  README.md  pyproject.toml
src/api/: metacritic.py
src/metacriticbot/: __main__.py  config.py
tests/api/: test_metacritic.py
